- fixed several memory leaks reported by Coverity scan
- temporary fix for error pop up message for IPP2.0+ attributes (issues/122)
- lpd queue names printed on the console (issues/132)
- use proper docstring (pull/130)
- remove deprecated SIGNAL_RUN_LAST (pull/134)
- use remote ppd for CUPS shared queues (pull/137)
- get rid of warnings in applet (Fedora issue #1732890)

1.5.10 changes
--------------

- printer couldn't be add ( https://bugzilla.redhat.com/show_bug.cgi?id=1419175 ) 
- changes from Ubuntu by Till Kamppeter (pull/64)
- .travis.yml: switch from precise to trusty (pull/63)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (pull/62)
- Add a StartService for systemd based systems (pull/56)
- French translation update (pull/57) 
- Spelling fixes (pull/58)
- Syntax fixes (pull/59)
- Python 3.6 invalid escape sequence deprecation fixes (pull/60)
- Adds printer properties dialog vertical expansion (pull/61)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (pull/62) 
- Improvements of discovered devices/conection type lists in new-printer wizard, more debug output (pull/65)
- replace libgnome-keyring by libsecret (issues/51)
- Do not start the applet on GNOME and Cinnamon desktops (pull/41)
- Do not notify on 'cups-waiting-for-job-completed' because it's not an… (pull/71)
- Updated Turkish translation (pull/74)
- Update tr.po (pull/73)
- TypeError on <dict>.update call (issues/76)
- build: Install appstream metadata to non-deprecated location #77 (pull/77)
- Addition of some strings for i18n (pull/81)
- Update .po and .pot files
- added GenericName and X-GNOME-FullName to system-config-printer.desktop.in (issues/20)
- removed some deprecated parts of gui
- updated translations by files from Zanata
- s-c-p doesn't react on ALREADY_ENABLED exception from firewalld
- removed deprecated Gtk objects
- another deprecated issues - GLib
- parent attribute in Gtk.Dialog is deprecated - use transient_for