@@ -20,6 +20,7 @@
 - remove deprecated SIGNAL_RUN_LAST (pull/134)
 - use remote ppd for CUPS shared queues (pull/137)
 - get rid of warnings in applet (Fedora issue #1732890)
+- check if we have required parameters in install-printerdriver (Fedora issue #1754204)
 
 1.5.10 changes
 --------------
